# ComfyUI-UniverSR

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  nodes_video.py  pyproject.toml  requirements.txt  universr_wrapper.py
configs/: config.yaml
docs/plans/: 2026-06-17-auto-input-sr-design.md
example_workflows/: universr_super_resolution.json  universr_video.json
tests/: test_auto_input_sr.py
web/js/: UniverSRVideo.js
